package at.htl.entity;

public class FacilityManager {
}
