package at.htl.entity;

public class Repairing {
}
