package at.htl.entity;

public class Room {
}
